--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1> Home page
 
   </h1>
+  <p> ยินดีต้อนรับ</p>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quae labore repellendus repudiandae ut maxime placeat et dignissimos tempore adipisci sequi ratione alias voluptate, dolores quis fugit cupiditate dolorem ipsum.</p>
 </body>
 </html>
