--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  
   <h1> Home page
 
   </h1>
+    <p> welcome message </p>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quae labore repellendus repudiandae ut maxime placeat et dignissimos tempore adipisci sequi ratione alias voluptate, dolores quis fugit cupiditate dolorem ipsum.</p>
 </body>
 </html>
